Archive2/0e/7ef252d3ea2f14/output
In file included from /usr/local/include/c++/4.9.2/map:60:0,
                 from main.cpp:1:
/usr/local/include/c++/4.9.2/bits/stl_tree.h: In instantiation of 'void std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_M_insert_unique(_II, _II) [with _InputIterator = int; _Key = int; _Val = std::pair<const int, int>; _KeyOfValue = std::_Select1st<std::pair<const int, int> >; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, int> >]':
/usr/local/include/c++/4.9.2/bits/stl_map.h:706:11:   required from 'void std::map<_Key, _Tp, _Compare, _Alloc>::insert(_InputIterator, _InputIterator) [with _InputIterator = int; _Key = int; _Tp = int; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, int> >]'
main.cpp:6:22:   required from here
/usr/local/include/c++/4.9.2/bits/stl_tree.h:1843:29: error: invalid type argument of unary '*' (have 'int')
    _M_insert_unique_(end(), *__first);
                             ^
